sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:19: error: not found: value nbBoucle
    nbBouble=nbBoucle+1
             ^